feat: :sparkles: Agregar precisión al frontend.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -83,7 +83,7 @@
             <div class="input-group">
               <label for="DiabetesPedigreeFunction">
                 <i class="fas fa-dna"></i>
-                Función de Pedigrí de Diabetes
+                Factor hereditario de diabetes
               </label>
               <input type="number" step="0.001" id="DiabetesPedigreeFunction" name="DiabetesPedigreeFunction" min="0"
                 max="3" required>
@@ -116,6 +116,7 @@
             <div class="result-content">
               <h3 id="result-title">Resultado</h3>
               <p id="result-message">Analizando...</p>
+              <p id="accuracy-display" style="display: none; font-weight: bold; margin-top: 10px;"></p>
             </div>
           </div>
 
