fix: :bug: Eliminar ruta innecesaria y corregir enlace de script en index.html

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -150,7 +150,7 @@
     </div>
   </div>
 
-  <script src="{{ url_for('static', path='js/main.js') }}"></script>
+  <script src="../static/js/main.js"></script>
 </body>
 
 </html>
